# TinyAya_MapHallu

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
Cross Language Consistency/: collect_data.py  model_client.py  prompt_loader.py  pyproject.toml
Cross Language Consistency/analysis/: compute_scs.py
Cross Language Consistency/config/: __init__.py  experiment_config.py
Cross Language Consistency/plots/: plot_clc.py
Cross Language Consistency/utils/: __init__.py  answer_utils.py  embedding_utils.py
hallucination-rate/: config.py
hallucination-rate/output/logs/exp1_out_of_region/: eval_command-a-translate-08-2025_20260318_000421.jsonl  eval_tiny-aya-base_20260317_233226.jsonl  eval_tiny-aya-fire_20260317_230923_en.jsonl  eval_tiny-aya-global_20260317_230923_en.jsonl  eval_tiny-aya-global_20260317_233226.jsonl  eval_tiny-aya-global_20260317_235811.jsonl  eval_tiny-aya-global_20260317_235834.jsonl  eval_tiny-aya-global_20260318_000421.jsonl
hallucination-rate/output/results/exp1_out_of_region/: results_command-a-translate-08-2025_20260318_000421.json  results_tiny-aya-fire_20260317_230923.json  results_tiny-aya-global_20260317_230923.json  results_tiny-aya-global_20260317_233226.json  results_tiny-aya-global_20260318_000421.json  summary_command-a-translate-08-2025_20260318_000421.json  summary_tiny-aya-fire_20260317_230923.json  summary_tiny-aya-global_20260317_230923.json  summary_tiny-aya-global_20260317_233226.json  summary_tiny-aya-global_20260318_000421.json
run_analysis/: .gitattributes  analysis.ipynb  compute_scs.py  load_data.py
run_analysis/previous_analysis/: CMDR.py  compute_amr.py  compute_clc_score.py  hr_metrics.py
run_analysis/previous_analysis/PSS/: compute_pss.py  compute_pss_score.py  utils.py
run_analysis/results/: scs_pairs.csv  scs_results.csv  scs_within_lang.csv
run_experiments/: EXPERIMENT.md  PLAN.md  model_client.py  run.py
run_experiments/config/: settings.py
run_experiments/data/: load_mkqa.py  load_xnli.py
run_experiments/runners/: base_runner.py  pss_runner.py
src/: CMDR.py  CMDR_Readme.md  helpers.py
