[project]
name = "tinyaya-maphallu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.7",
    "datasets>=4.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
