[project]
name = "tinyaya-maphallu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "cohere>=5.20.7",
    "comm==0.2.3",
    "datasets>=4.7.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "matplotlib>=3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "python-dotenv>=1.2.2",
    "pyzmq==27.1.0",
    "seaborn>=0.13.2",
    "stack-data==0.6.3",
    "torch>=2.10.0",
    "tornado==6.5.5",
    "tqdm>=4.67.3",
    "traitlets==5.14.3",
    "transformers>=5.3.0",
    "wcwidth==0.6.0",
]
