[project]
name = "cross-language-consistency"
version = "0.1.0"
description = "Cross-language consistency analysis for Tiny Aya hallucination mapping"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.0.0",
    "sentence-transformers>=2.7.0",
    "datasets>=2.19.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config","utils"]